@@ -1,3 +1,7 @@
+21/01/2020:
+	- Changes to standardize error messages in TPTImage class
+
+
 17/01/2020:
 	- Modified MAX_CVT startup variable. Values can now be set all the way
 	  down to 1px. Also possible to set to -1 to disable all limits
